store and load experiment
