# swagger_server/controllers/experiments_controller.py
@@ -1,10 +1,12 @@
 import connexion
 import six
 from swagger_server.datalayer.db import execute
-
+from flask import abort
 from swagger_server.models.exercise import Exercise  # noqa: E501
 from swagger_server.models.experiment import Experiment  # noqa: E501
 from swagger_server import util
+from swagger_server.service.exercise_service import get_next_random_exercise
+from swagger_server.service.experiment_service import create_experiment
 
 
 def add_experiment(body):  # noqa: E501
@@ -19,10 +21,16 @@ def add_experiment(body):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Experiment.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    
+    result = create_experiment(body)
+
+    if not result:
+        abort(404)
+
+    return result
 
 
-def get_exercise(experiment_id):  # noqa: E501
+def get_next_exercise(experiment_id, user_id):  # noqa: E501
     """Get next exercise for this specific experiment of this user
 
      # noqa: E501
@@ -33,9 +41,21 @@ def get_exercise(experiment_id):  # noqa: E501
     :rtype: Exercise
     """
 
-    sql = "SELECT * FROM Exercise WHERE Number = %s"
+    result = get_next_random_exercise(experiment_id, user_id)
 
-    print (str(experiment_id))
-    exercises = execute(sql, (experiment_id), "SELECT")
-    #return "Hello world " + str(experiment_id) + "!" 
-    return exercises
+    # if result is None than there is no experiment for the experimentid and userid
+    if result is None:
+        abort(404, "No experiment found with provided parameters")
+    # if result is () than there are no more exercises to answer
+    elif not result:
+        return ('', 204)
+    
+    # bring response in the required format
+    exercise = {
+        "id": result["PK"],
+        "mimeType": result["Mimetype"],
+        "question": result["Question"],
+        "encodedString": result["EncodedString"]
+    }
+
+    return exercise
